fixed header in 1166px and bigger than 900px was showing white space when reloading

--- a/components/header/header.css
+++ b/components/header/header.css
@@ -167,6 +167,7 @@ li {
     #menuList {
         text-align: center;
         display: block;
+        max-height: 0px;
         opacity: 0;
         transition: max-height 0.3s ease-out, opacity 0.3s ease-out;
         overflow: hidden;
